--- a/src/app/chart1/chart1.component.scss
+++ b/src/app/chart1/chart1.component.scss
@@ -1,14 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
 .chart-container {
     width: 100%;
     height: 100%;
     overflow: auto;
 
-    svg{
-        // padding: 20px ;
-        height: 100vh;
-        width: 100%;
-    }
+    // svg{
+    //     width: 1000px;
+    // }
   }
   
   .node circle {
@@ -16,7 +13,6 @@
     stroke: steelblue;
     stroke-width: 1.5px;
   }
-
   .node rect {
     fill: #fff;
     stroke: steelblue;
@@ -30,7 +26,7 @@
   .link {
     fill: none;
     stroke: #ccc;
-    stroke-width: 2px;
+    stroke-width: 1px;
   }
 
   
